<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F9F9F9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#9A7BBE"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:paddingBottom="20dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/ic_launcher" />

        <!-- App name -->
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_margin="40dp">

        <!-- Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#9A7BBE"
            android:text="@string/title_change_password"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <!-- Current Password Field -->
        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_current_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- New Password Field -->
        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- Confirm New Password Field -->
        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_new_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="#9A7BBE"
            android:padding="12dp"
            android:text="@string/btn_change_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</LinearLayout>
