<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9A7BBE"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        android:id="@+id/taskbar">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/ic_launcher" />

        <!-- Back Button -->
        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:contentDescription="@string/btn_back"
            app:tint="@android:color/white"
            android:layout_alignParentRight="true"/>

        <!-- App Name -->
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgLogo"
            android:text="@string/app_name_add_notes"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"/>
    </RelativeLayout>

    <!-- Title Input -->
    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskbar"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:hint="@string/hint_note_title"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:textSize="30sp" />

    <!-- Content Input -->
    <EditText
        android:id="@+id/etNoteContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/etNoteTitle"
        android:layout_above="@id/buttonLayout"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_note_content"
        android:textColor="@color/black"
        android:gravity="top"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:textSize="20sp"
        android:scrollbars="vertical"
        android:overScrollMode="ifContentScrolls"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:imeOptions="flagNoEnterAction"
        android:singleLine="false" />

    <!-- Buttons -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayout"
        android:layout_alignParentBottom="true"
        android:weightSum="2"/>

    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_note"
        android:background="#9A7BBE"
        android:padding="12dp"
        android:layout_margin="30dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/btnClearNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear_note"
        android:background="#9A7BBE"
        android:textColor="@color/white"
        android:padding="12dp"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />
</RelativeLayout>

